--- a/index.html
+++ b/index.html
@@ -10,14 +10,40 @@
   <body>
     <div class="header">RECORDCSS</div>
     <div class="main-container">
-      <div class="cover"></div>
-      <div class="cover"></div>
-      <div class="cover"></div>
-      <div class="cover"></div>
-      <div class="cover"></div>
-      <div class="cover"></div>
-      <div class="cover"></div>
-      <div class="cover"></div>
+      <div class="cover-tile c1">
+        <div class="cover-art"></div>
+      </div>
+      <div class="cover-tile c2">
+        <div class="cover-art"></div>
+        <div class="cover-text"></div>
+      </div>
+      <div class="cover-tile c3">
+        <div class="cover-art"></div>
+        <div class="cover-text">
+          <h1>MARS VOLTA</h1>
+          <h2>Noctourniquet</h2>
+        </div>
+      </div>
+      <div class="cover-tile c4">
+        <div class="cover-art"></div>
+        <div class="cover-text"></div>
+      </div>
+      <div class="cover-tile c1">
+        <div class="cover-art"></div>
+        <div class="cover-text"></div>
+      </div>
+      <div class="cover-tile c2">
+        <div class="cover-art"></div>
+        <div class="cover-text"></div>
+      </div>
+      <div class="cover-tile c3">
+        <div class="cover-art"></div>
+        <div class="cover-text"></div>
+      </div>
+      <div class="cover-tile c4">
+        <div class="cover-art"></div>
+        <div class="cover-text"></div>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
