css wireframe test

--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
     <div class="main-container">
       <div class="cover-tile c1">
         <div class="cover-art"></div>
+        <div class="cover-text">
+          <h1>Four Tet</h1>
+          <h2>Beautiful Rewind</h2>
+        </div>
       </div>
       <div class="cover-tile c2">
         <div class="cover-art"></div>
-        <div class="cover-text"></div>
+        <div class="cover-text">
+          <h1>MOUNT KIMBIE</h1>
+          <h2>Cold Spring Fault Less Youth</h2>
+        </div>
       </div>
       <div class="cover-tile c3">
         <div class="cover-art"></div>
@@ -26,23 +33,10 @@
       </div>
       <div class="cover-tile c4">
         <div class="cover-art"></div>
-        <div class="cover-text"></div>
-      </div>
-      <div class="cover-tile c1">
-        <div class="cover-art"></div>
-        <div class="cover-text"></div>
-      </div>
-      <div class="cover-tile c2">
-        <div class="cover-art"></div>
-        <div class="cover-text"></div>
-      </div>
-      <div class="cover-tile c3">
-        <div class="cover-art"></div>
-        <div class="cover-text"></div>
-      </div>
-      <div class="cover-tile c4">
-        <div class="cover-art"></div>
-        <div class="cover-text"></div>
+        <div class="cover-text">
+          <h1>Jon Hopkins</h1>
+          <h2>Remixes</h2>
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
