--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styles/style.css" />
-    <title>RECORDCSS</title>
+    <title>RECORD{CSS}</title>
   </head>
   <body>
-    <div class="header">RECORDCSS</div>
+    <div class="header">RECORD{CSS}</div>
     <div class="main-container">
       <div class="cover-tile c1">
         <div class="cover-art"></div>
