--- a/index.html
+++ b/index.html
@@ -7,38 +7,9 @@
     <link rel="stylesheet" href="styles/style.css" />
     <title>RECORD{CSS}</title>
   </head>
-  <body>
+  <body onload="createCards()">
     <div class="header">RECORD{CSS}</div>
-    <div class="main-container">
-      <div class="cover-tile c1">
-        <div class="cover-art"></div>
-        <div class="cover-text">
-          <h1>Four Tet</h1>
-          <h2>Beautiful Rewind</h2>
-        </div>
-      </div>
-      <div class="cover-tile c2">
-        <div class="cover-art"></div>
-        <div class="cover-text">
-          <h1>MOUNT KIMBIE</h1>
-          <h2>Cold Spring Fault Less Youth</h2>
-        </div>
-      </div>
-      <div class="cover-tile c3">
-        <div class="cover-art"></div>
-        <div class="cover-text">
-          <h1>MARS VOLTA</h1>
-          <h2>Noctourniquet</h2>
-        </div>
-      </div>
-      <div class="cover-tile c4">
-        <div class="cover-art"></div>
-        <div class="cover-text">
-          <h1>Jon Hopkins</h1>
-          <h2>Remixes</h2>
-        </div>
-      </div>
-    </div>
+    <div class="main-container"></div>
     <script src="script.js"></script>
   </body>
 </html>
